--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,32 @@
 ---
+import Card from '../components/Card.astro';
 import { getArticles } from '../hooks/article';
 import Layout from '../layouts/Layout.astro';
+import type { blog } from '../types/blog';
 
-const articles = await getArticles({fields: ["id", "title"]})
+const query =  { fields: ["id", "title", "tags", "description", "publishedAt", 'updatedAt'], limit: 6 }
+const articles = await getArticles(query)
 
 export const prerender = true;
 ---
 
 <Layout title="Welcome to Astro.">
-  <ul class="flex flex-col gap-y-4">
-    {articles.contents.map((content: any) => (
-      <a href={`/article/${content.id}`}>{content.title}</a>
-    ))}
-  </ul>
+  <div class="relative h-36 mt-4 mb-10 md:h-80 w-full overflow-y-hidden bg-[url('/images/main-visual.webp')] bg-cover bg-center bg-no-repeat">
+    <div class="absolute inset-0 bg-white/75 sm:bg-transparent sm:bg-gradient-to-r sm:from-white/95 sm:to-white/25"></div>
+  </div>
+  <div class="flex flex-col px-4 md:px-8 lg:px-12 mb-12 md:mb-16">
+    <div class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-4 md:gap-x-8 lg:gap-x-12 gap-y-8 lg:gap-y-12">
+        {articles.contents.map((content: blog) => (
+          <Card
+            title={content.title}
+            href={`/article/${content.id}`}
+            description={content.description}
+            tags={content.tags}
+            date={content.publishedAt}
+          />          
+        ))}
+    </div>
+  </div>
 </Layout>
 
 <style>
