--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,20 +1,34 @@
 ---
+import { HEADER_NAVI } from '../constans/const';
+import HeaderBtn from './HeaderBtn.astro';
+
 export interface Props {}
 
 const {} = Astro.props
 ---
 
-<header id="header" class="bg-header flex w-full items-center justify-center p-2">
-  <h1 class="text-lg font-semibold text-white">Header</h1>
-  <div class="flex items-center justify-between"></div>
+<header
+  id="header"
+  class="bg-white flex w-full min-w-full items-center justify-center p-2 md:justify-between md:py-4 md:px-8"
+>
+  <h1 class="text-lg font-semibold text-white">
+    <a href="/">
+      <img
+        src={'/images/logo/color-text-black.svg'}
+        alt=""
+        width="250px"
+        height="auto"
+      />
+    </a>
+  </h1>
+  <ul class="hidden items-center justify-between gap-x-8 md:flex">
+    {
+      HEADER_NAVI &&
+        HEADER_NAVI.map((navi) => (
+          <li>
+            <HeaderBtn page={navi.page} title={navi.title} subtitle={navi.subTitle} />
+          </li>
+        ))
+    }
+  </ul>
 </header>
-
-<style>
-  header {
-    height: 80px;
-    color: white;
-    background: #606c88;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #3f4c6b, #606c88);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #3f4c6b, #606c88); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  }
-</style>
