--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ const {} = Astro.props
 
 <header
   id="header"
-  class="bg-white flex w-full min-w-full items-center justify-center p-2 md:justify-between md:py-4 md:px-8"
+  class="bg-white flex w-full min-w-full items-center justify-center p-2 md:justify-between md:py-4 md:px-8 shadow-sm"
 >
   <h1 class="text-lg font-semibold text-white">
     <a href="/">
