--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,22 +4,22 @@ import { getArticles } from '../hooks/article';
 import Layout from '../layouts/Layout.astro';
 import type { blog } from '../types/blog';
 
-const query =  { fields: ["id", "title", "tags", "description", "publishedAt", 'updatedAt'], limit: 6 }
+const query =  { fields: ["path", "title", "tags", "description", "publishedAt", 'updatedAt'], limit: 6 }
 const articles = await getArticles(query)
 
 export const prerender = true;
 ---
 
 <Layout title="Welcome to Astro.">
-  <div class="relative h-36 mt-4 mb-10 md:h-80 w-full overflow-y-hidden bg-[url('/images/main-visual.webp')] bg-cover bg-center bg-no-repeat">
+  <div class="relative h-36 shadow-md mb-10 md:h-80 w-full overflow-y-hidden bg-[url('/images/main-visual.webp')] bg-cover bg-center bg-no-repeat">
     <div class="absolute inset-0 bg-white/75 sm:bg-transparent sm:bg-gradient-to-r sm:from-white/95 sm:to-white/25"></div>
   </div>
-  <div class="flex flex-col px-4 md:px-8 lg:px-12 mb-12 md:mb-16">
+  <div class="flex flex-col px-4 md:px-8 lg:px-12 mb-12 md:mb-16 w-full">
     <div class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-4 md:gap-x-8 lg:gap-x-12 gap-y-8 lg:gap-y-12">
         {articles.contents.map((content: blog) => (
           <Card
             title={content.title}
-            href={`/article/${content.id}`}
+            href={`/article/${content.path}`}
             description={content.description}
             tags={content.tags}
             date={content.publishedAt}
