--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,15 +3,6 @@ import { SITE_TITLE } from "../constans/const";
 
 ---
 
-<footer class="flex items-center justify-center h-16 mt-auto w-full text-sm">
-  <a href="/">{SITE_TITLE}</a>
+<footer class="bg-gradation flex items-center justify-center h-16 mt-auto w-full text-sm border-t border-gray-100">
+  <a href="/">©️ 2023 - {SITE_TITLE}</a>
 </footer>
-
-<style>
-  footer {
-    color: white;
-    background: #606c88;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #3f4c6b, #606c88);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #3f4c6b, #606c88); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  }
-</style>
